tests/mm0_mmu/fail/bad-sort432.mmu
-- bad modifier order
(sort s432 free provable strict)